# GitTest

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: main.py  models.py
tests/: test_main.py
