[project]
name = "codespaces-uv-example"
version = "0.1.0"
description = "Sample Python project on GitHub Codespaces using uv"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pytest",
  "httpx"
]

[tool.uv]
# 必要に応じて仮想環境の場所を固定
virtual = true
venv = ".venv"
